--- a/app/src/main/res/layout/popupinfo.xml
+++ b/app/src/main/res/layout/popupinfo.xml
@@ -22,7 +22,9 @@
             android:layout_marginLeft="14dp"
             android:layout_marginStart="14dp"
             android:layout_marginTop="12dp"
-            app:srcCompat="@mipmap/ic_launcher" />
+            android:visibility="visible"
+            app:srcCompat="@mipmap/ic_launcher"
+            />
 
         <TextView
             android:id="@+id/textNome"
@@ -31,7 +33,7 @@
             android:layout_alignLeft="@+id/imageView2"
             android:layout_alignStart="@+id/imageView2"
             android:layout_below="@+id/imageView2"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="0dp"
             android:text="TextView"
             android:textSize="20sp"
             tools:text="Nome" />
@@ -51,9 +53,12 @@
             android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="visible"
             app:srcCompat="@android:drawable/ic_menu_call"
             android:layout_alignTop="@+id/textNome"
-            android:layout_toRightOf="@+id/textNome"
-            android:layout_toEndOf="@+id/textNome" />
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="12dp"
+            android:layout_marginEnd="12dp" />
     </RelativeLayout>
 </LinearLayout>
