--- a/app/src/main/res/layout/popupinfo.xml
+++ b/app/src/main/res/layout/popupinfo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
-    android:gravity="bottom"
+    android:gravity="top"
     android:orientation="vertical">
 
     <RelativeLayout
